# py_cli_template

./: .editorconfig  .gitignore  LICENSE  readme.md  sample.env  setup.cfg
.github/workflows/: ci.yml
src/: cli.py
tests/: test_cli.py
