[metadata]
name = py_cli_template
version = 0.0.1
description = What the project does
long_description = file: readme.md
author = Dean Verhey
author_email = deanverhey@gmail.com

[options]
packages =
    src
python_requires = >=3.6
install_requires =
    python-dotenv

[options.extras_require]
dev =
    pytest
    pytest-mock
    black
    flake8

[options.entry_points]
console_scripts =
    app = src.cli:main

[flake8]
exclude = .git
max-complexity = 10
ignore =
    W504 # conflicts with black
max-line-length = 88
extend-ignore = E203
